Arquivos modificados segundo a demanda

--- a/han/graphics.html
+++ b/han/graphics.html
@@ -16,17 +16,18 @@
         4 - Todas as linhas devem possuir o mesmo número de elementos<br>
         5 - Todas as colunas devem possuir o mesmo número de elementos<br><br>
         Exemplo:<br>
-        água,eletricidade,gasolina,aluguel<br>
-        100,201,184,700<br>
-        95,198,200,700<br>
-        191,200,190,750<br>
-        Os dados 100, 95 e 191 estão contidos na coluna água, 201, 198 e 200 na coluna eletricidade e assim por diante.
+        Daily Engaged Users,Daily Organic Reach,Daily Viral Reach<br>
+        7,131,48<br>
+        8,179,10<br>
+        2,53,5<br>
+        2,36,17<br>
+        Os dados 7, 8 e 2 estão contidos na coluna Daily Engaged Users, 131, 179, 53 e 36 na coluna Daily Organic Reach e assim por diante.
       </p>
       <textarea
         placeholder="coluna1,coluna2"
         class="form-control"
-        name="dataAttributes"
-        id="dataAttributes"
+        name="data"
+        id="data"
         rows="3"></textarea>
     </div>
     <div class="form-group">
