--- a/han/tweets_list.html
+++ b/han/tweets_list.html
@@ -4,7 +4,11 @@
   <h3>Tweets</h2>
   {% for tweet in tweets %}
   <div style="margin-bottom: 20px;">
-    {{ tweet }}
+    {% for content in tweet %}
+      <div style="margin-bottom: 5px;">
+      {{ content }}
+      </div>
+    {% endfor %}
   </div>
   {% endfor %}
 {% endblock %}
