--- a/han/tweets_search.html
+++ b/han/tweets_search.html
@@ -14,7 +14,7 @@
       <div class="col-md-6">
         <label for="exampleInputEmail1">Data Inicio</label>
         <input
-          placeholder="1-1-2019"
+          placeholder="01-01-2020"
           class="form-control"
           name="startDate"
           id="startDate">
@@ -22,7 +22,7 @@
       <div class="col-md-6">
         <label for="exampleInputEmail1">Data Fim</label>
         <input
-          placeholder="31-1-2019"
+          placeholder="31-12-2020"
           class="form-control"
           name="endDate"
           id="endDate">
@@ -42,12 +42,13 @@
       <label for="typeSearch">O tweet deve conter: </label>
       <select name="search" id="search">
         <option value="all-kw">todas as palavras-chave</option>
-        <option value="one-kw">no mínimo uma palavras-chave</option>
+        <option value="one-kw">no mínimo uma palavra-chave</option>
       </select>
     </div>
     <div class="form-group">
       <label for="numSearch">Número máximo de tweets retornados: </label>
       <select name="num" id="num">
+        <option value='ilimitado'>Ilimitado</option>option>
         <option value="200">200</option>
         <option value="100">100</option>
         <option value="50">50</option>
@@ -61,7 +62,6 @@
         name='words'
         id="exampleFormControlTextarea1"
         rows="3"></textarea>
-      <small id="palavraHelp" class="form-text text-muted">* tweets com qualquer uma dessas palavras serão retornados</small>
     </div>
     <button type="submit" class="btn btn-primary">Buscar</button>
   </form>
